app/styles/components/ellipsis.css
.ellipsis {
  display: flex;
  align-items: flex-end;
  gap: 0.25em;
  height: 1em;
}

.ellipsis span {
  width: 0.4em;
  height: 0.4em;
  border-radius: 50%;
  background-color: currentColor;
  display: inline-block;
  animation: pulse 1.2s infinite ease-in-out;
}

@media (prefers-reduced-motion: reduce) {
  .ellipsis span {
    animation: none !important;
    opacity: 1 !important;
    transform: none !important;
  }
}

.ellipsis span:nth-child(1) {
  animation-delay: 0s;
}

.ellipsis span:nth-child(2) {
  animation-delay: 0.2s;
}

.ellipsis span:nth-child(3) {
  animation-delay: 0.4s;
}

@keyframes pulse {

  0%,
  80%,
  100% {
    opacity: 0.2;
    transform: scale(0.6);
  }

  40% {
    opacity: 1;
    transform: scale(1);
  }
}

